# CompetitorRecognition

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: session.py
app/models/: domain.py
app/schemas/: domain.py
app/services/: agent.py  content_extraction.py  discovery.py  extractors.py  gemini_extraction.py  graph_store.py  intake.py  intelligence.py  llm_discovery.py  pipeline.py  reports.py  scheduler.py  scraper.py  store.py  vector_store.py  web_search.py
app/static/: styles.css
app/templates/: index.html
data/: README.md
scripts/: seed_demo.py
tests/: test_discovery.py  test_extractors.py  test_intelligence.py  test_reports.py
