[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "competitor-intel"
version = "0.1.0"
description = "Agentic web intelligence platform for competitor discovery, extraction, and knowledge graph analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4,<4.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "chromadb>=0.5.23,<1.0.0",
  "duckduckgo-search>=7.5.1,<8.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "google-generativeai>=0.8.4,<1.0.0",
  "httpx>=0.27.0,<0.29.0",
  "jinja2>=3.1.4,<4.0.0",
  "kuzu>=0.8.3,<1.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "requests>=2.32.3,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "streamlit>=1.44.0,<2.0.0",
  "trafilatura>=1.12.2,<2.0.0",
  "uvicorn[standard]>=0.30.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
